[package]
name = "bis_enf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.9.0"
log = "0.4.20"
byteorder = "1.4.3"
env_logger = { version = "0.10.0", features = [] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3