[package]
name = "bis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.10.0"
log = "0.4.20"
thiserror = "1.0.49"
byteorder = "1.4.3"
io-streams = "0.15.0"
bex = { path = "lib/bex"}

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3